[gd_scene load_steps=18 format=3 uid="uid://d0634w5kelvba"]

[ext_resource type="Script" path="res://scripts/enemies/dagger_demon_2/dagger_demon_2.gd" id="1_aefjw"]
[ext_resource type="Texture2D" uid="uid://b21y1no60iugc" path="res://sprites/entities/dagger_demon/attack/dagger demon attack.0008.png" id="1_mj6vx"]
[ext_resource type="Texture2D" uid="uid://c7gfb2mdl21e" path="res://sprites/entities/dagger_demon/idle/dagger_demon_idle.0020.png" id="1_xip75"]
[ext_resource type="Texture2D" uid="uid://dhxxuymm1ni51" path="res://sprites/entities/dagger_demon/idle/dagger_demon_idle.0025.png" id="2_2mr80"]
[ext_resource type="Texture2D" uid="uid://3xuulcubas6m" path="res://sprites/entities/dagger_demon/attack/dagger demon attack.0009.png" id="2_mfn6l"]
[ext_resource type="Texture2D" uid="uid://dnmqv3sg7awi1" path="res://sprites/entities/dagger_demon/attack/dagger demon attack.0010.png" id="3_1wlxi"]
[ext_resource type="Texture2D" uid="uid://c4tenh0u8nto2" path="res://sprites/entities/dagger_demon/idle/dagger_demon_idle.0022.png" id="3_5ukav"]
[ext_resource type="Texture2D" uid="uid://blrt7s2eice1x" path="res://sprites/entities/dagger_demon/attack/dagger demon attack.0011.png" id="4_chbpx"]
[ext_resource type="Texture2D" uid="uid://cbesoypewsltg" path="res://sprites/entities/dagger_demon/idle/dagger_demon_idle.0023.png" id="4_tjt2u"]
[ext_resource type="Texture2D" uid="uid://remyl8runuch" path="res://sprites/entities/dagger_demon/idle/dagger_demon_idle.0024.png" id="5_1csc4"]
[ext_resource type="Texture2D" uid="uid://bsvdb1pna1r3g" path="res://sprites/entities/dagger_demon/idle/dagger_demon_idle.0026.png" id="6_fjc8w"]
[ext_resource type="PackedScene" uid="uid://cqmh4t4ov7mja" path="res://scenes/enemies/enemy_template.tscn" id="7_n1wim"]
[ext_resource type="PackedScene" uid="uid://w07m35qgysc0" path="res://scenes/components/entity_component_system.tscn" id="12_r5str"]

[sub_resource type="Animation" id="Animation_fmg5g"]
resource_name = "attack"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyTemplate/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_mj6vx"), ExtResource("2_mfn6l"), ExtResource("3_1wlxi"), ExtResource("4_chbpx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyTemplate/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, -30), Vector2(30, -30), Vector2(0, -30)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyTemplate/Rotatable/EntityComponentSystem/Polygon:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-80, -64, 80, -64, 80, 48, -80, 48)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyTemplate/Rotatable/AttackHitbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:can_move")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Cooldown")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.3],
"method": &"start"
}]
}

[sub_resource type="Animation" id="Animation_0n8e1"]
resource_name = "idle"
length = 2.00001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyTemplate/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.9, 1, 1.1, 1.3, 1.4, 1.5, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_xip75"), ExtResource("2_2mr80"), ExtResource("3_5ukav"), ExtResource("4_tjt2u"), ExtResource("5_1csc4"), ExtResource("2_2mr80"), ExtResource("1_xip75"), ExtResource("1_xip75"), ExtResource("6_fjc8w"), ExtResource("1_xip75"), ExtResource("1_xip75"), ExtResource("6_fjc8w"), ExtResource("1_xip75"), ExtResource("1_xip75")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyTemplate/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(20, -30)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyTemplate/Rotatable/EntityComponentSystem/Polygon:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-80, -64, 80, -64, 80, 48, -80, 48)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:can_move")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s5kxo"]
_data = {
"attack": SubResource("Animation_fmg5g"),
"idle": SubResource("Animation_0n8e1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_p0cis"]
radius = 40.0

[node name="DaggerDemon2" type="Node2D"]
scale = Vector2(1.25, 1.25)
script = ExtResource("1_aefjw")

[node name="WaitTime" type="Timer" parent="."]
one_shot = true

[node name="Cooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s5kxo")
}

[node name="EnemyTemplate" parent="." instance=ExtResource("7_n1wim")]
collision_mask = 385

[node name="AttackHitbox" parent="EnemyTemplate/Rotatable" index="0" instance=ExtResource("12_r5str")]
collision_layer = 32
collision_mask = 6
monitoring = false

[node name="CollisionShape" parent="EnemyTemplate/Rotatable/AttackHitbox" index="0"]
position = Vector2(149, -110.5)

[node name="CollisionPolygon" parent="EnemyTemplate/Rotatable/AttackHitbox" index="1"]
polygon = PackedVector2Array(204.8, -115.2, 178, -22, 104, -2, 75, -15)

[node name="PlayerDetectingArea" type="Area2D" parent="EnemyTemplate/Rotatable" index="1"]
visible = false
collision_layer = 0
collision_mask = 6

[node name="Polygon" type="CollisionPolygon2D" parent="EnemyTemplate/Rotatable/PlayerDetectingArea"]
polygon = PackedVector2Array(716.8, 204.8, -716.8, 204.8, -716.8, -230.4, 716.8, -230.4)

[node name="EntityComponentSystem" parent="EnemyTemplate/Rotatable" index="2"]
collision_layer = 8

[node name="Shape" parent="EnemyTemplate/Rotatable/EntityComponentSystem" index="0"]
position = Vector2(0, -24)

[node name="Polygon" parent="EnemyTemplate/Rotatable/EntityComponentSystem" index="1"]
polygon = PackedVector2Array(-80, -64, 80, -64, 80, 48, -80, 48)

[node name="CollisionPolygon" parent="EnemyTemplate/Rotatable/DamageHitboxComponent" index="1"]
polygon = PackedVector2Array(-5, -53.2, -37, -2, -5, 46, 27, -2)

[node name="CrushArea" parent="EnemyTemplate" index="1"]
position = Vector2(-14, 82)

[node name="Polygon" parent="EnemyTemplate/CrushArea" index="1"]
position = Vector2(-37.2, -82)
polygon = PackedVector2Array(25.6, -64, -12.8, -51.2, 115.2, -51.2, 76.8, -64)

[node name="Polygon2" type="CollisionPolygon2D" parent="EnemyTemplate/CrushArea" index="2"]
position = Vector2(-37.2, -82)
polygon = PackedVector2Array(50, -56, -12.8, -51.2, 115.2, -51.2)

[node name="Shape" parent="EnemyTemplate" index="2"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_p0cis")

[node name="Sprite" type="Sprite2D" parent="EnemyTemplate"]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_xip75")
offset = Vector2(20, -30)

[connection signal="body_entered" from="EnemyTemplate/Rotatable/PlayerDetectingArea" to="." method="_on_player_detecting_area_body_entered"]
[connection signal="body_exited" from="EnemyTemplate/Rotatable/PlayerDetectingArea" to="." method="_on_player_detecting_area_body_exited"]

[editable path="EnemyTemplate"]
[editable path="EnemyTemplate/Rotatable/AttackHitbox"]
[editable path="EnemyTemplate/Rotatable/DamageHitboxComponent"]
